--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
-#/[Aa]ssets/Editor/CriWare/
-#/[Aa]ssets/Plugins/CriWare/
-#/[Aa]ssets/Gizmos/CriWare/
+/[Aa]ssets/Editor/CriWare/
+/[Aa]ssets/Plugins/CriWare/
+/[Aa]ssets/Gizmos/CriWare/
 /[Aa]ssets/Editor/CriWare.meta
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
